/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package com.android.launcher3.view;

option java_outer_classname = "ViewCaptureData";

message ExportedData {
  repeated FrameData frameData = 1;
}

message FrameData {
  optional int64 timestamp = 1;
  optional ViewNode node = 2;
}

message ViewNode {
  optional string classname = 1;
  optional string id = 2;
  optional int32 left = 3;
  optional int32 top = 4;
  optional int32 width = 5;
  optional int32 height = 6;
  optional int32 scrollX = 7;
  optional int32 scrollY = 8;

  optional float translationX = 9;
  optional float translationY = 10;
  optional float scaleX = 11 [default = 1];
  optional float scaleY = 12 [default = 1];
  optional float alpha = 13 [default = 1];

  optional bool willNotDraw = 14;
  optional bool clipChildren = 15;
  optional int32 visibility = 16;

  repeated ViewNode children = 17;

  optional float elevation = 18;
}